[package]
name = "cve"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Mappings for parsing the CVE JSON files"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
repository = "https://github.com/ctron/cve"
categories = ["data-structures"]
keywords = ["cve", "json", "serde"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
anyhow = "1"
env_logger = "0.10.0"
log = "0.4.20"
time = { version = "0.3", features = ["macros"] }
walkdir = "2"
indicatif = { version = "0.17", features = ["rayon"] }
indicatif-log-bridge = "0.2"
rayon = "1"
