[package]
name = "cve"
version = "0.4.1"
edition = "2021"
license = "Apache-2.0"
description = "Mappings for parsing the CVE JSON files"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
repository = "https://github.com/scm-rs/cve"
categories = ["data-structures"]
keywords = ["cve", "json", "serde"]
readme = "README.md"
rust-version = "1.82" # due to icu, litemap, zerotrie, zerovec

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
anyhow = "1"
env_logger = "0.11.0"
indicatif = { version = "0.18", features = ["rayon"] }
indicatif-log-bridge = "0.2.3"
log = "0.4.20"
rayon = "1"
time = { version = "0.3", features = ["macros"] }
walkdir = "2"
